--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@ que buscam conteúdo em português.
     <h5>  </h5>
     <h6> Senac </h6> 
 
+    <a href="">Para nada</a>
+    <a href="htp://cora.cpdee.ufmg.br/">Outro site</a><br>
+    <a href="outro.html">Outra página do site</a><br>
+    <a href="#ID">Alguma parte da página</a>
 
 </body>
 
