--- a/index.html
+++ b/index.html
@@ -1,58 +1,24 @@
-<!--  
-Primeiro arquivo em HTLM. O index geralmente é o principal.
-
-<h1> </h1> TÍTULO
-<p> </p> PARÁGRAFO
-<html> </html> O SITE FICA DENTRO. O LANG serve para indiciar ao google (sistema de recomendação) que o site deve ser enviado para pessoas
-que buscam conteúdo em português.
-<head> </head> aqui entram os arquivos de configuração que serão carregados primeiro quando o usuário acessar o site
-<body> </body> conteúdo do site
-<title> </title> diferente do h1. é o nome do site
-<style> </style> personalizar com CSS
-    # serve para personalizar com ID
-    e para personalizar outro qualquer é pra por o nome, ex: h6 
-
-<style>
-        h6{
-            fonte-size: 30
-        }
-    </style>
-
-<h1> Título de nível | prioridade 1 </h1>
-<h2> Título de nível | prioridade 2 </h2>
-<h3> Título de nível | prioridade 3 </h3>
-<h4> Título de nível | prioridade 4 </h4>
-<h5> Título de nível | prioridade 5 </h5>
-<h6> Título de nível | prioridade 6 </h6> 
-
-<a href="">Para nada</a>
-<a href="htp://cora.cpdee.ufmg.br/">Outro site</a><br>
-<a href="#ID">Alguma parte da página</a>
--->
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
-
-
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Aprendendo HTML - Home</title>
 </head>
-
-
 <body>
+    <img src="home.jpeg" alt="home" title="Home" />
+    <h1>SENAC | Python Full Stack Dev</h1>
+    <h2>Aprendendo HTML e CSS - Aula 01 do módulo 02.</h2> 
+    <a href="https://github.com/dokcreative/"> Link para meu <b>github</b>.</a><br>
+    <style>
+        h1{
+            color: darkslateblue;
+        }
+        h2{
+            font-size: 20px;
+        }
+    </style>
+    <a href="secundaria.html"> Clique aqui para entrar na página de anotações </a>
     
-    <h1> Senac </h1>
-    <h2>  </h2>
-    <h3> </h3>
-    <h4> Senac </h4>
-    <h5>  </h5>
-    <h6> Senac </h6> 
-
-
-    <a href="outro.html">Outra página do site</a><br>
-
-
 </body>
-
-
 </html>
