--- a/index.html
+++ b/index.html
@@ -4,21 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aprendendo HTML - Home</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+
     <img src="home.jpeg" alt="home" title="Home" />
     <h1>SENAC | Python Full Stack Dev</h1>
     <h2>Aprendendo HTML e CSS - Aula 01 do módulo 02.</h2> 
     <a href="https://github.com/dokcreative/"> Link para meu <b>github</b>.</a><br>
-    <style>
-        h1{
-            color: darkslateblue;
-        }
-        h2{
-            font-size: 20px;
-        }
-    </style>
-    <a href="secundaria.html"> Clique aqui para entrar na página de anotações </a>
+    <a href="secundaria.html"> Clique aqui para entrar na página de anotações </a><br>
     
 </body>
 </html>
